apps/hyunjiin-user-api/overlays/prod/patch-openapi-server-url.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyunjiin-user-api
  namespace: hyunjiin
spec:
  template:
    spec:
      containers:
        - name: user-api
