apps/hyunjiin-user-api/overlays/prod/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyunjiin-user-api
  namespace: hyunjiin
spec:
  replicas: 1
