apps/hyunjiin-user-api/overlays/prod/patch-ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hyunjiin-user-api
  namespace: hyunjiin
spec:
  rules:
    - host: hyunjiin.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hyunjiin-user-api
                port:
                  name: http
